# spectre-scraper

./: README.md  pyproject.toml
spider/: spider.py
